# trav_plan_assistant

./: .checkpoints.db  .env.example  .gitignore  CLAUDE.md  adaptive_travel_companion_blueprint_v2.docx  cli.py  main.py  pyproject.toml  simulate_disruption.py  skills-lock.json  test_echo.py
agents/: constraint_profiler.py  destination_research.py  itinerary_builder.py  replanning.py
budget/: __init__.py  ledger.py
deploy/: docker-compose.yml
docs/superpowers/plans/: 2026-04-26-phase1-foundation.md  2026-05-05-phase4-replanning-budget-fallbacks.md
docs/superpowers/specs/: 2026-04-26-phase1-design.md  2026-05-05-phase4-replanning-budget-fallbacks-design.md
graph/: __init__.py  checkpointer.py  graph.py  reducers.py  state.py
models/: __init__.py  budget.py  disruption.py  itinerary.py  profile.py  replanning.py
rag/: ingest.py  reranker.py  retriever.py
rag/corpus/: sample_destinations.py  schema.py
rag/vocabulary/: dietary_tags.yaml
tests/: conftest.py  test_budget_ledger.py  test_budget_ledger_service.py  test_destination_research.py  test_disruption_rules.py  test_fallback_staging.py  test_graph.py  test_itinerary_builder.py  test_live_data_worker.py  test_models.py  test_profiler.py  test_providers.py  test_queue.py  test_reducers.py  test_replanning.py  test_retriever.py
workers/: disruption_rules.py  live_data_worker.py  queue.py
workers/providers/: advisories.py  amadeus.py  aviationstack.py  duffel.py  transit.py  weather.py  wheelmap.py
